wordwrap fix

--- a/src/resources/styles/comptext.scss
+++ b/src/resources/styles/comptext.scss
@@ -69,3 +69,7 @@
   white-space: pre-wrap;
   word-break: break-word;
 }
+
+.wordbreak {
+  word-break: break-word;  
+}
